--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,8 @@ language: c
 dist: bionic
 sudo: required
 install: 
-  -sudo apt update
-  -sudo apt-get install -y libcurl4-openeel-dev
+  - sudo apt update
+  - sudo apt-get install -y libcurl4-openssl-dev
 script:
-  -gcc hello.c -o hello -lcurl
+  - gcc hello.c -o hello -lcurl
   - ./hello
